10 Life Lessons from Honeybees 🐝

--- a/.github/workflows/honeybees.yml
+++ b/.github/workflows/honeybees.yml
@@ -118,7 +118,7 @@ jobs:
             </head>
             <body>
               <header>
-                <h1>Life Lessons from Honeybees 🐝</h1>
+                <h1> 10 Life Lessons from Honeybees 🐝 </h1>
               </header>
 
               <p>
